Se terminaron los estilos y las secciones con la información

--- a/hobbies.html
+++ b/hobbies.html
@@ -4,9 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Hobbies</title>
 </head>
-<body>
-    
+<body class="bdyHobbies">
+    <main>
+    <h1>
+        Entre mis hobbies se encuentran:
+    </h1>
+
+    <div class="progra">
+        <p class="txtProgra">  
+        <img class="imgProgra" src="images/data.png" align="middle"> -----> Programar
+        </p> 
+    </div>
+
+    <div class="vg">
+        <p class="txtVg">  
+        <img class="imgVg" src="images/joystick.png" align="middle"> -----> Jugar videojuegos
+        </p> 
+    </div>
+
+    <div class="bs">
+        <p class="txtBs">  
+        <img class="imgBs" src="images/baseball-player.png" align="middle"> -----> Jugar beisbol
+        </p> 
+    </div>
+
+    <div class="musica">
+        <p class="txtMusica">  
+        <img class="imgMusica" src="images/listen.png" align="middle"> -----> Escuchar musica
+        </p> 
+    </div>
+
+    <div class="dormir">
+        <p class="txtDormir">  
+        <img class="imgDormir" src="images/sleeping.png" align="middle"> -----> Dormir
+        </p> 
+    </div>
+
+    <div>
+        <form action="index.html">
+            <button class="btnHobbiesAtras" type="submit">Pagina Principal</button>
+        </form>
+    </div>
+    </main>
 </body>
 </html>
