--- a/series.html
+++ b/series.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Series Favoritas</title>
 </head>
-<body>
+<body class="bdySeries">
+    <main>
+        <h1>
+            Mis series favoritas son (No veo muchas):
+        </h1>
     
+        <div class="zoo">
+            <p class="txtZoo">  
+            <img class="imgZoo" src="images/lion.png" align="middle"> -----> Zoo
+            </p> 
+        </div>
+
+        <div class="nar">
+            <p class="txtNar">  
+            <img class="imgNar" src="images/revolver.png" align="middle"> -----> Narcos Mexico
+            </p> 
+        </div>
+
+        <div class="cf">
+            <p class="txtCf">  
+            <img class="imgCf" src="images/flower-pot.png" align="middle"> -----> La casa de las flores
+            </p> 
+        </div>
+
+        <div>
+            <form action="index.html">
+                <button class="btnSeriesAtras" type="submit">Pagina Principal</button>
+            </form>
+        </div>
+
+    </main>
 </body>
 </html>
