La landing page fue escrita en inglés

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landinpage</title>
     <link rel="stylesheet" href="styles.css">
     <STYLE type="text/css"> H1 {margin: 3px 0px -70px 0px;} </STYLE>
 </head>
@@ -23,21 +23,21 @@
             </div>
 
             <div class="peliculas">
-            <h1>Peliculas favoritas</h1>
+            <h1>Favorite Movies</h1>
             <form action="peliculas.html">
                 <button class="btnPeliculas" type="submit">Ir</button>
                 </form>
             </div>
 
             <div class="series">
-            <h1>Series favoritas</h1>
+            <h1>Favorite series</h1>
             <form action="series.html">
                 <button class="btnSeries" type="submit">Ir</button>
                 </form>
             </div>
 
             <div class="contacto">
-            <h1>Contacto</h1>
+            <h1>Contact</h1>
             <form action="contacto.html">
             <button class="btnContacto" type="submit">Ir</button>
             </form>
