--- a/peliculas.html
+++ b/peliculas.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Peliculas favoritas</title>
+    <title>Favorite Movies</title>
 </head>
 <body class="bdyPeliculas">
     <main>
-    <h1>Mis peliculas favoritas son: </h1>
+    <h1>My favorite movies are: </h1>
     
     <div class="gigAcero">
         <p class="txtGigAcero">  
-        <img class="imgGigAcero" src="images/robot.png" align="middle"> -----> Gigantes de Acero
+        <img class="imgGigAcero" src="images/robot.png" align="middle"> -----> Real Steel
         </p>    
     
     <div class="shrek">
@@ -30,13 +30,13 @@
 
     <div class="jp">
         <p class="txtJp">  
-        <img class="imgJp" src="images/baseball-ball.png" align="middle"> -----> Juego Perfecto
+        <img class="imgJp" src="images/baseball-ball.png" align="middle"> -----> The perfect Game
         </p>  
     </div>
 
     <div>
         <form action="index.html">
-            <button class="btnPeliculasAtras" type="submit">Pagina Principal</button>
+            <button class="btnPeliculasAtras" type="submit">Homepage</button>
         </form>
     </div>
 
