--- a/series.html
+++ b/series.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Series Favoritas</title>
+    <title>Favorite Series</title>
 </head>
 <body class="bdySeries">
     <main>
         <h1>
-            Mis series favoritas son (No veo muchas):
+            My favorite series are (I don't watch a lot fo series):
         </h1>
     
         <div class="zoo">
@@ -27,13 +27,13 @@
 
         <div class="cf">
             <p class="txtCf">  
-            <img class="imgCf" src="images/flower-pot.png" align="middle"> -----> La casa de las flores
+            <img class="imgCf" src="images/flower-pot.png" align="middle"> -----> The house of flowers
             </p> 
         </div>
 
         <div>
             <form action="index.html">
-                <button class="btnSeriesAtras" type="submit">Pagina Principal</button>
+                <button class="btnSeriesAtras" type="submit">Homepage</button>
             </form>
         </div>
 
