--- a/contacto.html
+++ b/contacto.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="styles.css">
-    <title>Contacto</title>
+    <title>Contact</title>
 </head>
 <body class="bdyContacto">
     <main>
         <h1>
-            Puedes contactarme en:
+            Yo can contact me at:
         </h1>
 
         <div class="fb">
@@ -45,7 +45,7 @@
 
         <div>
             <form action="index.html">
-                <button class="btnContactoAtras" type="submit">Pagina Principal</button>
+                <button class="btnContactoAtras" type="submit">Homepage</button>
             </form>
         </div>
     </main>
