--- a/hobbies.html
+++ b/hobbies.html
@@ -10,42 +10,42 @@
 <body class="bdyHobbies">
     <main>
     <h1>
-        Entre mis hobbies se encuentran:
+        Between my hobbies are:
     </h1>
 
     <div class="progra">
         <p class="txtProgra">  
-        <img class="imgProgra" src="images/data.png" align="middle"> -----> Programar
+        <img class="imgProgra" src="images/data.png" align="middle"> -----> Programming
         </p> 
     </div>
 
     <div class="vg">
         <p class="txtVg">  
-        <img class="imgVg" src="images/joystick.png" align="middle"> -----> Jugar videojuegos
+        <img class="imgVg" src="images/joystick.png" align="middle"> -----> Play videogames
         </p> 
     </div>
 
     <div class="bs">
         <p class="txtBs">  
-        <img class="imgBs" src="images/baseball-player.png" align="middle"> -----> Jugar beisbol
+        <img class="imgBs" src="images/baseball-player.png" align="middle"> -----> Play baseball
         </p> 
     </div>
 
     <div class="musica">
         <p class="txtMusica">  
-        <img class="imgMusica" src="images/listen.png" align="middle"> -----> Escuchar musica
+        <img class="imgMusica" src="images/listen.png" align="middle"> -----> Listen to music
         </p> 
     </div>
 
     <div class="dormir">
         <p class="txtDormir">  
-        <img class="imgDormir" src="images/sleeping.png" align="middle"> -----> Dormir
+        <img class="imgDormir" src="images/sleeping.png" align="middle"> -----> Sleep
         </p> 
     </div>
 
     <div>
         <form action="index.html">
-            <button class="btnHobbiesAtras" type="submit">Pagina Principal</button>
+            <button class="btnHobbiesAtras" type="submit">Homepage</button>
         </form>
     </div>
     </main>
